--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,7 @@ nav {
     box-shadow: 2px 2px 5px grey !important;    
 }
 
-table {
-    margin-top: 5%;
-}
+
 
 .removeLocations{
     cursor: pointer;
@@ -14,7 +12,11 @@ table {
 .albergueInfo {
     height: 35px;
     vertical-align:bottom;
-    width: 200px ;
+    width: 100%;
+}
+
+.albergueSmall{    
+    width: 250px !important;
 }
 
 .btnInfo  {
@@ -26,7 +28,8 @@ table {
 
 .albergueBig {
     margin-left: 10px;
-    margin-right: 10px;
+    margin-top: 5%;
+  
 }
 
 .rowTable{
@@ -35,4 +38,8 @@ table {
 
 table, td, tr, th {
     text-align: center;
+}
+
+#selectType{
+    margin-top: 40px !important;
 }
