--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -85,10 +85,6 @@
   </div>
 </div>
 
-<div class="col-sm-12">
-  
-</div>
-
 <table class="table table-hover">
     <thead>
       <tr class="bg-dark">
@@ -117,9 +113,13 @@
     </tbody>
   </table>
 
-<div class="col-sm-12">
-  <div id="map" style="color: white !important; "></div>
-</div>
+
+  <div class="col-sm-12">
+    <agm-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="false" [zoom]="zoom">
+      <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
+    </agm-map>
+  </div>
+  
 
  <!--<input [hidden]="!isLoggedIn()"  type="text" placeholder="Search for Location" 
   autocorrect="off" autocapitalize="off" spellcheck="off" class="form-control" #search
